# GED_Construction-status

./: README.md
1. Opening a Window/GED2D/: CMakeLists.txt
1. Opening a Window/GED2D/src/Windowing/: Window.cpp  Window.h
GED2D/: CMakeLists.txt  makefile  qwnfkl;qjw.txt
GED2D/Dependencies/GLAD/: GLAD.vcxproj
GED2D/Dependencies/GLAD/include/glad/: glad.h
GED2D/Dependencies/GLAD/src/: glad.c
GED2D/src/: GED_WINDOW.vcxproj  GED_WINDOW.vcxproj.filters  SDL_Wrappers.cpp  SDL_Wrappers.h  main.cpp
GED2D/src/Windowing/: Window.cpp  Window.h
GED2D/src/x64/Debug/GED_WINDOW.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GED_WINDOW.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
